# todolist

./: .dockerignore  .env.template  Dockerfile  Dockerfile.prod  docker-compose.yaml  pyproject.toml
bot/: admin.py  models.py  serializers.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_custom_user_model.py
deploy/: docker-compose.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_add_goals_category_model.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
tests/: fixtures.py
tests/core_tests/: test_user_views.py
tests/goals_tests/: test_board_views.py  test_category_views.py  test_comment_views.py  test_goal_views.py
todolist/: settings.py  urls.py
