[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["AgeHT <vladimir.e.pavlov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
